Don't hide some folders when restarting KMail after it was quit with having a quick search active.

Patch by Vincent Dupont <vincent.touffi at gmail dot com>, thank you!

BUG: 187041
http://reviewboard.kde.org/r/743/

svn path=/trunk/KDE/kdepim/; revision=971322